--- a/Examples/Podfile
+++ b/Examples/Podfile
@@ -1,7 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
-source 'git@github.com:skyway/skyway-ios-sdk-specs.git'
-source 'git@github.com:skyway/skyway-ios-webrtc-specs.git'
+source 'https://github.com/skyway/skyway-ios-sdk-specs.git'
+source 'https://github.com/skyway/skyway-ios-webrtc-specs.git'
 
 target 'AutoSubscribingRoom' do
   # Comment the next line if you don't want to use dynamic frameworks
