--- a/Examples/Podfile
+++ b/Examples/Podfile
@@ -8,7 +8,7 @@ target 'AutoSubscribingRoom' do
   use_frameworks!
 
   # Pods for AutoSubscribingRoom
-  pod 'SkyWayRoom', '~> 1.0'
+  pod 'SkyWayRoom'
 end
 
 target 'P2PRoom' do
@@ -16,7 +16,7 @@ target 'P2PRoom' do
   use_frameworks!
 
   # Pods for P2PRoom
-  pod 'SkyWayRoom', '~> 1.0'
+  pod 'SkyWayRoom'
 end
 
 target 'SFURoom' do
@@ -24,5 +24,5 @@ target 'SFURoom' do
   use_frameworks!
 
   # Pods for SFURoom
-  pod 'SkyWayRoom', '~> 1.0'
+  pod 'SkyWayRoom'
 end
